tests/paczka1/fuzzy1/95311096.err
Error in line 3: OBgz1oj S874 36,2
Error in line 4: OBgz1oj S240 80,4
Error in line 8: OBgz1oj S251 58,4
Error in line 9: OBgz1oj S522 12,4
Error in line 12: 9ywIPFDDPC1 S240 71,7
Error in line 1: S240 S522 67,3
Error in line 17: S240 S251 73,2
Error in line 18: S240 S874 72,8
Error in line 34: 4YgSvzbFv1 S522 40,2
Error in line 39: 9ywIPFDDPC1 S522 25,8
